--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
