--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mazbrew.github.io",
+  "homepage": "https://mazbrew.github.io/portfolio",
   "name": "frontend",
   "private": false,
   "version": "0.0.0",
